# nishika-sake

./: Dockerfile  README.md  TODO.md  docker-compose.yml  pyproject.toml  start.sh
.devcontainer/: devcontainer.json
notebooks/02_train_classification/: meigara_classification.ipynb
notebooks/03_distance_learning/: 01-1_arcface_with_tf_efficientnet_b0_ns_fix_seed.ipynb  01-2_arcface_with_tf_efficientnet_b0_ns_metrics_params_optim.ipynb  01_arcface_with_tf_efficientnet_b0_ns.ipynb  02-1_arcface_with_tf_efficientnet_b0_ns_apply_gem_metrics_params_optim.ipynb  02_arcface_with_tf_efficientnet_b0_ns_apply_gem.ipynb  03-1_arcface_tuning.ipynb  03-2_data_aug_select.ipynb  03-3_arcface_with_tf_efficientnet_b0_ns_apply_tuned_params.ipynb  03-4_arcface_with_tf_efficientnet_b0_ns_apply_tuned_params_margine_default.ipynb  04-1_circle_loss_with_tf_efficientnet_b0_ns.ipynb  05-1_subcenter_arcface_with_tf_efficientnet_b0_ns.ipynb  06-1_arcface_with_conv_next_base_224.ipynb  06-2_arcface_with_conv_next_nano_512.ipynb  06-3_arcface_with_swin_transformer.ipynb  06-4_arcface_with_efficientnetv2_b3.ipynb  06-5_arcface_with_eva_v2.ipynb  06-6_arcface_with_dolg.ipynb  06-7_NFNet_L0_img_size_768.ipynb  06-8_swin_transformer_v2.ipynb  07-1_adaptive_arcface_with_effnet_b0.ipynb  08-1_arcface_with_label_ls_effnetb0.ipynb  09-10_effnetv1b0_fix_focal_loss.ipynb  09-11_effnetv1b0_1024_apply_rotate.py  09-1_effnetb0_apply_rotate.ipynb  9-12_maxvit.ipynb  (+15 more)
src/: const.py  data_handler.py  datasets.py  emsamble.py  pptx_utils.py  query_expansion.py  searcher.py  utils.py
tools/: fetch_data.py
(+58 files in other folders)
