[tool.poetry]
name = "work"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
transformers = "~4.30.2"
timm = "~0.9.2"
faiss-gpu = "~1.7.2"
seaborn = "~0.12.2"
albumentations = "~1.3.1"
tqdm = "~4.65.0"
japanize-matplotlib = "~1.1.3"
scikit-learn = "~1.3.0"
jupyterlab = "~4.0.2"
ipywidgets = "~8.0.6"
cosine-annealing-warmup = {git = "https://github.com/katsura-jp/pytorch-cosine-annealing-with-warmup"}
tensorboard = "~2.13.0"
pytorch-metric-learning = "~2.2.0"
llvmlite = "~0.40.1"
umap-learn = "~0.5.3"


[tool.poetry.group.dev.dependencies]
black = "~23.3.0"
flake8 = "~6.0.0"
isort = "~5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
